Fix footer on smaller screens

--- a/sass/widgets/_footer.scss
+++ b/sass/widgets/_footer.scss
@@ -1,12 +1,15 @@
 #footer-widget-1 {
-	display: flex;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
 	padding-right: 80px;
+	// @todo Needs background image
 	// background: $brown;
 	background: #67585C;
 	@include font-size( 1.8 );
 
 	ul {
 		list-style: none;
+		padding: 0 20px;
 	}
 
 	a {
@@ -18,8 +21,6 @@
 	}
 
 	.widget {
-		flex: 1;
-
 		&:first-of-type {
 			display: flex;
 			align-items: center;
@@ -91,6 +92,94 @@
 
 			.wc-icon-wp {
 				background-image: url( "#{$svg-wp}" );
+			}
+		}
+	}
+
+	.widget_media_image {
+		padding: 60px;
+	}
+
+	@media ( max-width: 960px ) {
+		grid-template-columns: 1fr 1fr 1fr;
+
+		.widget:nth-of-type(1) {
+			grid-row: 1 / span 2;
+		}
+
+		.widget:nth-of-type(2) {
+			grid-column: 2;
+		}
+
+		.widget:nth-of-type(3) {
+			grid-column: 2;
+			grid-row: 2;
+
+			&, ul {
+				margin-top: 0;
+			}
+		}
+
+		.widget:nth-of-type(4) {
+			grid-column: 3;
+			grid-row: 1 / span 2;
+		}
+	}
+
+	@media ( max-width: 782px ) {
+		padding-right: 0;
+		grid-template-columns: 1fr 1fr;
+
+		.widget:nth-of-type(1) {
+			grid-column: 1 / span 2;
+			grid-row: 1;
+		}
+
+		.widget:nth-of-type(2) {
+			grid-column: 1;
+			grid-row: 2;
+		}
+
+		.widget:nth-of-type(3) {
+			grid-column: 1;
+			grid-row: 3;
+		}
+
+		.widget:nth-of-type(4) {
+			grid-column: 2;
+			grid-row: 2 / span 2;
+			padding-right: 20px;
+		}
+	}
+
+	@media ( max-width: 480px ) {
+		grid-template-columns: 1fr;
+
+		.widget:nth-of-type(1) {
+			grid-column: 1;
+			grid-row: 1;
+		}
+
+		.widget:nth-of-type(2) {
+			grid-column: 1;
+			grid-row: 2;
+		}
+
+		.widget:nth-of-type(3) {
+			grid-column: 1;
+			grid-row: 3;
+		}
+
+		.widget:nth-of-type(4) {
+			grid-column: 1;
+			grid-row: 4;
+			text-align: left;
+			margin-top: 0;
+			padding-left: 20px;
+			padding-right: 20px;
+
+			ul {
+				justify-content: flex-start;
 			}
 		}
 	}
